fix: make sure icon-heart does not cause horizontal scrolling

--- a/src/assets/book-summary.css
+++ b/src/assets/book-summary.css
@@ -77,7 +77,7 @@
 .book-summary .article-main .icon-heart {
 	position: absolute;
 	top: 0;
-	right: 0;
+	right: 1px;
 	color: red;
 	margin-top: 0.375em;
 }
